tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_one_element_zero_sized_member_failure/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
   ┌─ src/main.nr:10:5
   │
10 │     arr[i].b
   │     ------
   │
   = Call stack:
     1: main
             at src/main.nr:10:5

Failed assertion
