tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_one_element_zero_sized_member_failure/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 10 is out of bounds for the array of length 1
   ┌─ src/main.nr:10:5
   │
10 │     arr[i].b
   │     ------
   │

Error interpreting main function
